--- a/.github/workflows/release-python-gpu.yml
+++ b/.github/workflows/release-python-gpu.yml
@@ -2,7 +2,7 @@ name: release-python-gpu
 
 on:
   push:
-    branches: [master]
+    branches: [main]
     # tags:
     #   - '*'
 
@@ -209,15 +209,6 @@ jobs:
           package-dir: ./ncnn-python-gpu
           output-dir: wheelhouse
 
-      - name: add msvcp140.dll for windows arm64
-        if: matrix.os == 'windows-latest' && matrix.arch == 'ARM64'
-        shell: powershell
-        run: |
-          Install-Module -Name "VcRedist" -Force
-          Import-Module VcRedist
-          $VcList = Get-VcList | Get-VcRedist -Path "D:/"
-          $VcList | Install-VcRedist -Path D:/
-
       - name: Build wheels for windows ARM64
         if: matrix.os == 'windows-latest' && matrix.arch == 'ARM64'
         uses: pypa/cibuildwheel@v2.15.0
@@ -239,7 +230,7 @@ jobs:
                             mklink /d "D:/a/ncnn-gpu-pre-verification/ncnn-gpu-pre-verification/Vulkan-Loader/external/Vulkan-Headers/build/install/lib"
                             "D:/a/ncnn-gpu-pre-verification/ncnn-gpu-pre-verification/Vulkan-Loader/build/loader/Debug"
 
-          CIBW_BEFORE_BUILD: pip install delvewheel
+          CIBW_BEFORE_BUILD: pip install delvewheel --add-path "c:/Windows/System32/" 
           CIBW_REPAIR_WHEEL_COMMAND: delvewheel repair -w {dest_dir} {wheel}
         with:
           package-dir: ./ncnn-python-gpu
