--- a/actionsbackup/release-python-gpu-bakcup2.yml
+++ b/actionsbackup/release-python-gpu-bakcup2.yml
@@ -209,6 +209,15 @@ jobs:
           package-dir: ./ncnn-python-gpu
           output-dir: wheelhouse
 
+      - name: add msvcp140.dll for windows arm64
+        if: matrix.os == 'windows-latest' && matrix.arch == 'ARM64'
+        shell: powershell
+        run: |
+          Install-Module -Name "VcRedist" -Force
+          Import-Module VcRedist
+          $VcList = Get-VcList | Get-VcRedist -Path "D:/"
+          $VcList | Install-VcRedist -Path D:/
+
       - name: Build wheels for windows ARM64
         if: matrix.os == 'windows-2019' && matrix.arch == 'ARM64'
         uses: pypa/cibuildwheel@v2.15.0
