--- a/.github/workflows/release-python-gpu.yml
+++ b/.github/workflows/release-python-gpu.yml
@@ -64,8 +64,8 @@ jobs:
           - { os: windows-latest, arch: ARM64,      build: 'cp*'            } 
           # - { os: macos-latest, arch: x86_64,     build: 'cp*'            }
           # - { os: macos-latest, arch: x86_64,     build: 'pp*'            }
-          # - { os: macos-latest, arch: arm64,      build: 'cp*'            } 
-          # - { os: macos-latest, arch: universal2, build: 'cp*'            } 
+          - { os: macos-latest, arch: arm64,      build: 'cp*'            } 
+          - { os: macos-latest, arch: universal2, build: 'cp*'            } 
 
     steps:
       - uses: actions/checkout@v3
