--- a/.github/workflows/release-python-gpu.yml
+++ b/.github/workflows/release-python-gpu.yml
@@ -248,7 +248,9 @@ jobs:
           CIBW_BUILD: ${{ matrix.build }}
           CIBW_BUILD_VERBOSITY: 1
           CIBW_ENVIRONMENT: CMAKE_BUILD_PARALLEL_LEVEL=2 NCNN_VULKAN=TRUE VULKAN_SDK=${{steps.verify-vulkan.outputs.VULKAN_SDK}}
-          CIBW_REPAIR_WHEEL_COMMAND: delocate-wheel -w {dest_dir} -v {wheel}
+                            Vulkan_INCLUDE_DIR=${{steps.verify-vulkan.outputs.VULKAN_SDK}}/MoltenVK/include
+                            Vulkan_LIBRARY=${{steps.verify-vulkan.outputs.VULKAN_SDK}}/MoltenVK/dylib/macOS/libMoltenVK.dylib
+          # CIBW_REPAIR_WHEEL_COMMAND: delocate-wheel -w {dest_dir} -v {wheel}
         with:
           package-dir: ncnn-python-gpu
           output-dir: wheelhouse
