--- a/.github/workflows/release-python-gpu.yml
+++ b/.github/workflows/release-python-gpu.yml
@@ -185,7 +185,7 @@ jobs:
         run: |
           cd openmp-11.0.0.src
           mkdir -p build-x86_64 && cd build-x86_64
-          cmake -DCMAKE_TOOLCHAIN_FILE=../../toolchains/ios.toolchain.cmake -DPLATFORM=MAC -DARCHS="x86_64" \
+          cmake -DCMAKE_TOOLCHAIN_FILE=$GITHUB_WORKSPACE/toolchains/ios.toolchain.cmake -DPLATFORM=MAC -DARCHS="x86_64" \
               -DDEPLOYMENT_TARGET=$MAC_DEPLOYMENT_TARGET -DENABLE_BITCODE=$ENABLE_BITCODE -DENABLE_ARC=$ENABLE_ARC -DENABLE_VISIBILITY=$ENABLE_VISIBILITY \
               -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=install \
               -DPERL_EXECUTABLE=/usr/local/bin/perl \
@@ -198,7 +198,7 @@ jobs:
         run: |
           cd openmp-11.0.0.src
           mkdir -p build-arm64 && cd build-arm64
-          cmake -DCMAKE_TOOLCHAIN_FILE=../../toolchains/ios.toolchain.cmake -DPLATFORM=MAC_ARM64 -DARCHS="arm64" \
+          cmake -DCMAKE_TOOLCHAIN_FILE=$GITHUB_WORKSPACE/toolchains/ios.toolchain.cmake -DPLATFORM=MAC_ARM64 -DARCHS="arm64" \
               -DDEPLOYMENT_TARGET=$MAC_ARM64_DEPLOYMENT_TARGET -DENABLE_BITCODE=$ENABLE_BITCODE -DENABLE_ARC=$ENABLE_ARC -DENABLE_VISIBILITY=$ENABLE_VISIBILITY \
               -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=install \
               -DPERL_EXECUTABLE=/usr/local/bin/perl \
