--- a/.github/workflows/release-python-gpu.yml
+++ b/.github/workflows/release-python-gpu.yml
@@ -7,6 +7,11 @@ on:
     #   - '*'
 env:
   DEVELOPER_DIR: /Applications/Xcode_13.4.1.app/Contents/Developer
+  MAC_DEPLOYMENT_TARGET: '10.9'
+  MAC_ARM64_DEPLOYMENT_TARGET: '11.0'
+  ENABLE_BITCODE: OFF
+  ENABLE_ARC: OFF
+  ENABLE_VISIBILITY: OFF
 
 jobs:
   # build_sdist:
