--- a/.github/workflows/release-python-gpu.yml
+++ b/.github/workflows/release-python-gpu.yml
@@ -65,13 +65,13 @@ jobs:
           # - { os: ubuntu-20.04, arch: i686,       build: 'cp*-musllinux*' } 
           # - { os: ubuntu-20.04, arch: i686,       build: 'pp*'            } 
           # - { os: windows-2019, arch: x86,        build: 'cp*'            } 
-          # - { os: windows-2019, arch: AMD64,      build: 'cp*'            }
-          # - { os: windows-2019, arch: AMD64,      build: 'pp*'            }
+          - { os: windows-2019, arch: AMD64,      build: 'cp*'            }
+          - { os: windows-2019, arch: AMD64,      build: 'pp*'            }
           # - { os: windows-2019, arch: ARM64,      build: 'cp*'            } 
-          - { os: macos-latest, arch: x86_64,     build: 'cp*'            }
-          - { os: macos-latest, arch: x86_64,     build: 'pp*'            }
-          - { os: macos-latest, arch: arm64,      build: 'cp*'            } 
-          - { os: macos-latest, arch: universal2, build: 'cp*'            } 
+          # - { os: macos-latest, arch: x86_64,     build: 'cp*'            }
+          # - { os: macos-latest, arch: x86_64,     build: 'pp*'            }
+          # - { os: macos-latest, arch: arm64,      build: 'cp*'            } 
+          # - { os: macos-latest, arch: universal2, build: 'cp*'            } 
 
     steps:
       - uses: actions/checkout@v3
@@ -89,22 +89,6 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.x'
-
-      - name: prepare vulkan sdk for windows amd64 
-        if: matrix.os == 'windows-2019' && matrix.arch == 'AMD64'
-        uses: humbletim/setup-vulkan-sdk@v1.2.0
-        with:
-          vulkan-query-version: latest
-          vulkan-components: Vulkan-Headers, Vulkan-Loader
-          vulkan-use-cache: true
-
-      - id: verify-vulkan
-        if: matrix.os == 'windows-2019' && matrix.arch == 'AMD64'
-        name: verify vulkan sdk install for windows amd64 and macos
-        shell: bash
-        run: |
-          echo "VULKAN_SDK_VERSION='$VULKAN_SDK_VERSION'" >> "$GITHUB_OUTPUT"
-          echo "VULKAN_SDK='$VULKAN_SDK'" >> "$GITHUB_OUTPUT"
 
       - name: Build wheels for ubuntu manylinux
         if: matrix.os == 'ubuntu-20.04'  &&  matrix.build != 'cp*-musllinux*'
@@ -160,13 +144,75 @@ jobs:
           CIBW_ARCHS_WINDOWS: ${{ matrix.arch }}
           CIBW_BUILD: ${{ matrix.build }}
           CIBW_BUILD_VERBOSITY: 1
-          CIBW_ENVIRONMENT: CMAKE_BUILD_PARALLEL_LEVEL=2 NCNN_VULKAN=ON VULKAN_SDK=${{steps.verify-vulkan.outputs.VULKAN_SDK}}
+          CIBW_ENVIRONMENT_WINDOWS: >
+                            PATH="D:\\a\\ncnn-gpu-pre-verification\\ncnn-gpu-pre-verification\\Vulkan-Loader\\build\\loader\\Debug;$PATH"
+                            CMAKE_BUILD_PARALLEL_LEVEL=2 NCNN_VULKAN=ON 
+                            VULKAN_SDK=D:/a/ncnn-gpu-pre-verification/ncnn-gpu-pre-verification/Vulkan-Loader/external/Vulkan-Headers
+          CIBW_BEFORE_ALL: git clone https://github.com/KhronosGroup/Vulkan-Loader.git &&
+                           cd Vulkan-Loader && mkdir build && cd build &&
+                           python3 ../scripts/update_deps.py --dir ../external --arch ${{ matrix.arch }} --config debug &&
+                           cmake -C ../external/helper.cmake -G "Visual Studio 16 2019" -A Win64 -DCMAKE_BUILD_TYPE=Debug .. &&
+                           cmake --build . &&
+                           mklink /d "D:/a/ncnn-gpu-pre-verification/ncnn-gpu-pre-verification/Vulkan-Loader/external/Vulkan-Headers/build/install/lib"
+                           "D:/a/ncnn-gpu-pre-verification/ncnn-gpu-pre-verification/Vulkan-Loader/build/loader/Debug"
           CIBW_BEFORE_BUILD: pip install delvewheel
           CIBW_REPAIR_WHEEL_COMMAND: delvewheel repair -w {dest_dir} {wheel}
         with:
-          package-dir: ncnn-python-gpu
+          package-dir: ./ncnn-python-gpu
           output-dir: wheelhouse
       
+      - name: Build wheels for windows x86
+        if: matrix.os == 'windows-2019' && matrix.arch == 'x86'
+        uses: pypa/cibuildwheel@v2.15.0
+        env:
+          CIBW_ARCHS_MACOS: ${{ matrix.arch }}
+          CIBW_ARCHS_LINUX: ${{ matrix.arch }}
+          CIBW_ARCHS_WINDOWS: ${{ matrix.arch }}
+          CIBW_BUILD: ${{ matrix.build }}
+          CIBW_BUILD_VERBOSITY: 1
+          CIBW_ENVIRONMENT_WINDOWS: >
+                            PATH="D:\\a\\ncnn-gpu-pre-verification\\ncnn-gpu-pre-verification\\Vulkan-Loader\\build\\loader\\Debug;$PATH"
+                            CMAKE_BUILD_PARALLEL_LEVEL=2 NCNN_VULKAN=ON 
+                            VULKAN_SDK=D:/a/ncnn-gpu-pre-verification/ncnn-gpu-pre-verification/Vulkan-Loader/external/Vulkan-Headers
+          CIBW_BEFORE_ALL: git clone https://github.com/KhronosGroup/Vulkan-Loader.git &&
+                           cd Vulkan-Loader && mkdir build && cd build &&
+                           python3 ../scripts/update_deps.py --dir ../external --arch ${{ matrix.arch }} --config debug &&
+                           cmake -C ../external/helper.cmake -G "Visual Studio 16 2019" -A Win32 -DCMAKE_BUILD_TYPE=Debug .. &&
+                           cmake --build . &&
+                           mklink /d "D:/a/ncnn-gpu-pre-verification/ncnn-gpu-pre-verification/Vulkan-Loader/external/Vulkan-Headers/build/install/lib"
+                           "D:/a/ncnn-gpu-pre-verification/ncnn-gpu-pre-verification/Vulkan-Loader/build/loader/Debug"
+          CIBW_BEFORE_BUILD: pip install delvewheel
+          CIBW_REPAIR_WHEEL_COMMAND: delvewheel repair -w {dest_dir} {wheel}
+        with:
+          package-dir: ./ncnn-python-gpu
+          output-dir: wheelhouse
+
+      - name: Build wheels for windows ARM64
+        if: matrix.os == 'windows-2019' && matrix.arch == 'ARM64'
+        uses: pypa/cibuildwheel@v2.15.0
+        env:
+          CIBW_ARCHS_MACOS: ${{ matrix.arch }}
+          CIBW_ARCHS_LINUX: ${{ matrix.arch }}
+          CIBW_ARCHS_WINDOWS: ${{ matrix.arch }}
+          CIBW_BUILD: ${{ matrix.build }}
+          CIBW_BUILD_VERBOSITY: 1
+          CIBW_ENVIRONMENT_WINDOWS: >
+                            PATH="D:\\a\\ncnn-gpu-pre-verification\\ncnn-gpu-pre-verification\\Vulkan-Loader\\build\\loader\\Debug;$PATH"
+                            CMAKE_BUILD_PARALLEL_LEVEL=2 NCNN_VULKAN=ON 
+                            VULKAN_SDK=D:/a/ncnn-gpu-pre-verification/ncnn-gpu-pre-verification/Vulkan-Loader/external/Vulkan-Headers
+          CIBW_BEFORE_ALL:  git clone https://github.com/KhronosGroup/Vulkan-Loader.git &&
+                            cd Vulkan-Loader && mkdir build && cd build &&
+                            python3 ../scripts/update_deps.py --dir ../external --config debug &&
+                            cmake -C ../external/helper.cmake -G "Visual Studio 16 2019" -A ARM64 -DCMAKE_BUILD_TYPE=Debug -DUSE_MASM=OFF ..  &&
+                            cmake --build . &&
+                            mklink /d "D:/a/ncnn-gpu-pre-verification/ncnn-gpu-pre-verification/Vulkan-Loader/external/Vulkan-Headers/build/install/lib"
+                            "D:/a/ncnn-gpu-pre-verification/ncnn-gpu-pre-verification/Vulkan-Loader/build/loader/Debug"
+
+          CIBW_BEFORE_BUILD: pip install delvewheel 
+          CIBW_REPAIR_WHEEL_COMMAND: delvewheel repair -w {dest_dir} {wheel} --no-dll "msvcp140.dll;vcomp140.dll" 
+        with:
+          package-dir: ./ncnn-python-gpu
+          output-dir: wheelhouse
 
       ###### prepare for macOs
       - name: cache-openmp for macos
@@ -256,61 +302,6 @@ jobs:
           package-dir: ncnn-python-gpu
           output-dir: wheelhouse
 
-      - name: Build wheels for windows x86
-        if: matrix.os == 'windows-2019' && matrix.arch == 'x86'
-        uses: pypa/cibuildwheel@v2.15.0
-        env:
-          CIBW_ARCHS_MACOS: ${{ matrix.arch }}
-          CIBW_ARCHS_LINUX: ${{ matrix.arch }}
-          CIBW_ARCHS_WINDOWS: ${{ matrix.arch }}
-          CIBW_BUILD: ${{ matrix.build }}
-          CIBW_BUILD_VERBOSITY: 1
-          CIBW_ENVIRONMENT_WINDOWS: >
-                            PATH="D:\\a\\ncnn-gpu-pre-verification\\ncnn-gpu-pre-verification\\Vulkan-Loader\\build\\loader\\Debug;$PATH"
-                            CMAKE_BUILD_PARALLEL_LEVEL=2 NCNN_VULKAN=ON 
-                            VULKAN_SDK=D:/a/ncnn-gpu-pre-verification/ncnn-gpu-pre-verification/Vulkan-Loader/external/Vulkan-Headers
-          CIBW_BEFORE_ALL: git clone https://github.com/KhronosGroup/Vulkan-Loader.git &&
-                           cd Vulkan-Loader && mkdir build && cd build &&
-                           python3 ../scripts/update_deps.py --dir ../external --arch ${{ matrix.arch }} --config debug &&
-                           cmake -C ../external/helper.cmake -G "Visual Studio 16 2019" -A Win32 -DCMAKE_BUILD_TYPE=Debug .. &&
-                           cmake --build . &&
-                           mklink /d "D:/a/ncnn-gpu-pre-verification/ncnn-gpu-pre-verification/Vulkan-Loader/external/Vulkan-Headers/build/install/lib"
-                           "D:/a/ncnn-gpu-pre-verification/ncnn-gpu-pre-verification/Vulkan-Loader/build/loader/Debug"
-
-          CIBW_BEFORE_BUILD: pip install delvewheel
-          CIBW_REPAIR_WHEEL_COMMAND: delvewheel repair -w {dest_dir} {wheel}
-        with:
-          package-dir: ./ncnn-python-gpu
-          output-dir: wheelhouse
-
-      - name: Build wheels for windows ARM64
-        if: matrix.os == 'windows-2019' && matrix.arch == 'ARM64'
-        uses: pypa/cibuildwheel@v2.15.0
-        env:
-          CIBW_ARCHS_MACOS: ${{ matrix.arch }}
-          CIBW_ARCHS_LINUX: ${{ matrix.arch }}
-          CIBW_ARCHS_WINDOWS: ${{ matrix.arch }}
-          CIBW_BUILD: ${{ matrix.build }}
-          CIBW_BUILD_VERBOSITY: 1
-          CIBW_ENVIRONMENT_WINDOWS: >
-                            PATH="D:\\a\\ncnn-gpu-pre-verification\\ncnn-gpu-pre-verification\\Vulkan-Loader\\build\\loader\\Debug;$PATH"
-                            CMAKE_BUILD_PARALLEL_LEVEL=2 NCNN_VULKAN=ON 
-                            VULKAN_SDK=D:/a/ncnn-gpu-pre-verification/ncnn-gpu-pre-verification/Vulkan-Loader/external/Vulkan-Headers
-          CIBW_BEFORE_ALL:  git clone https://github.com/KhronosGroup/Vulkan-Loader.git &&
-                            cd Vulkan-Loader && mkdir build && cd build &&
-                            python3 ../scripts/update_deps.py --dir ../external --config debug &&
-                            cmake -C ../external/helper.cmake -G "Visual Studio 16 2019" -A ARM64 -DCMAKE_BUILD_TYPE=Debug -DUSE_MASM=OFF ..  &&
-                            cmake --build . &&
-                            mklink /d "D:/a/ncnn-gpu-pre-verification/ncnn-gpu-pre-verification/Vulkan-Loader/external/Vulkan-Headers/build/install/lib"
-                            "D:/a/ncnn-gpu-pre-verification/ncnn-gpu-pre-verification/Vulkan-Loader/build/loader/Debug"
-
-          CIBW_BEFORE_BUILD: pip install delvewheel 
-          CIBW_REPAIR_WHEEL_COMMAND: delvewheel repair -w {dest_dir} {wheel} --no-dll "msvcp140.dll;vcomp140.dll" 
-        with:
-          package-dir: ./ncnn-python-gpu
-          output-dir: wheelhouse
-
-
       - name: Build wheels for macos test
         if: (matrix.os == 'macos-latest' && matrix.arch == 'arm64') || 
             (matrix.os == 'macos-latest' && matrix.arch == 'universal2')
@@ -329,7 +320,6 @@ jobs:
             OpenMP_libomp_LIBRARY="$DEVELOPER_DIR/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/lib/libomp.a"
             Vulkan_INCLUDE_DIR=$GITHUB_WORKSPACE/vulkansdk-macos-1.3.236.0/MoltenVK/include
             Vulkan_LIBRARY=$GITHUB_WORKSPACE/vulkansdk-macos-1.3.236.0/MoltenVK/dylib/macOS/libMoltenVK.dylib
-          # CIBW_REPAIR_WHEEL_COMMAND: delocate-wheel -w {dest_dir} -v {wheel}
         with:
           package-dir: ncnn-python-gpu
           output-dir: wheelhouse
