--- a/.github/workflows/release-python-gpu.yml
+++ b/.github/workflows/release-python-gpu.yml
@@ -90,6 +90,7 @@ jobs:
         with:
           python-version: '3.x'
 
+      # build wheels for ubuntu-20.04
       - name: Build wheels for ubuntu manylinux
         if: matrix.os == 'ubuntu-20.04'  &&  matrix.build != 'cp*-musllinux*'
         uses: pypa/cibuildwheel@v2.15.0
@@ -135,6 +136,7 @@ jobs:
           package-dir: ./ncnn-python-gpu
           output-dir: wheelhouse
 
+      # build wheels for windows-2019
       - name: Build wheels for windows amd64
         if: matrix.os == 'windows-2019' && matrix.arch == 'AMD64'
         uses: pypa/cibuildwheel@v2.15.0
@@ -150,7 +152,7 @@ jobs:
                             VULKAN_SDK=D:/a/ncnn-gpu-pre-verification/ncnn-gpu-pre-verification/Vulkan-Loader/external/Vulkan-Headers
           CIBW_BEFORE_ALL: git clone https://github.com/KhronosGroup/Vulkan-Loader.git &&
                            cd Vulkan-Loader && mkdir build && cd build &&
-                           python3 ../scripts/update_deps.py --dir ../external --arch ${{ matrix.arch }} --config debug &&
+                           python3 ../scripts/update_deps.py --dir ../external --config debug &&
                            cmake -C ../external/helper.cmake -G "Visual Studio 16 2019" -A Win64 -DCMAKE_BUILD_TYPE=Debug .. &&
                            cmake --build . &&
                            mklink /d "D:/a/ncnn-gpu-pre-verification/ncnn-gpu-pre-verification/Vulkan-Loader/external/Vulkan-Headers/build/install/lib"
@@ -214,7 +216,7 @@ jobs:
           package-dir: ./ncnn-python-gpu
           output-dir: wheelhouse
 
-      ###### prepare for macOs
+      # build wheels for macos-latest
       - name: cache-openmp for macos
         if: matrix.os == 'macos-latest'
         id: cache-openmp
@@ -302,7 +304,7 @@ jobs:
           package-dir: ncnn-python-gpu
           output-dir: wheelhouse
 
-      - name: Build wheels for macos test
+      - name: Build wheels for macos arm64 and macos universal2
         if: (matrix.os == 'macos-latest' && matrix.arch == 'arm64') || 
             (matrix.os == 'macos-latest' && matrix.arch == 'universal2')
         uses: pypa/cibuildwheel@v2.15.0
