--- a/.github/workflows/release-python-gpu.yml
+++ b/.github/workflows/release-python-gpu.yml
@@ -180,7 +180,7 @@ jobs:
                            cd Vulkan-Loader && mkdir build && cd build &&
                            python3 ../scripts/update_deps.py --dir ../external --arch ${{ matrix.arch }} --config release &&
                            cmake -C ../external/helper.cmake -G "Visual Studio 16 2019" -A Win32 -DCMAKE_BUILD_TYPE=Release .. &&
-                           cmake --build . &&
+                           cmake --build . --config Release &&
                            mklink /d "D:/a/ncnn-gpu-pre-verification/ncnn-gpu-pre-verification/Vulkan-Loader/external/Vulkan-Headers/build/install/lib"
                            "D:/a/ncnn-gpu-pre-verification/ncnn-gpu-pre-verification/Vulkan-Loader/build/loader/Release"
           CIBW_BEFORE_BUILD: pip install delvewheel
@@ -206,7 +206,7 @@ jobs:
                             cd Vulkan-Loader && mkdir build && cd build &&
                             python3 ../scripts/update_deps.py --dir ../external --config release &&
                             cmake -C ../external/helper.cmake -G "Visual Studio 16 2019" -A ARM64 -DCMAKE_BUILD_TYPE=Release -DUSE_MASM=OFF ..  &&
-                            cmake --build . &&
+                            cmake --build . --config Release &&
                             mklink /d "D:/a/ncnn-gpu-pre-verification/ncnn-gpu-pre-verification/Vulkan-Loader/external/Vulkan-Headers/build/install/lib"
                             "D:/a/ncnn-gpu-pre-verification/ncnn-gpu-pre-verification/Vulkan-Loader/build/loader/Release"
 
